feat: done header sticky

--- a/index.html
+++ b/index.html
@@ -14,6 +14,36 @@
 
 <body>
     <div class="all-wrapper">
+        <nav class="header-menu sticky-header">
+            <div class="wrapper-sticky">
+                <ul class="header-menu-list">
+                    <li class="header-menu-item">
+                        <a class="header-menu-link" href="#contacts">Контакты</a>
+                    </li>
+                    <li class="header-menu-item">
+                        <a class="header-menu-link" href="#education">Образование</a>
+                    </li>
+                    <li class="header-menu-item">
+                        <a class="header-menu-link" href="#experience">Опыт</a>
+                    </li>
+                    <li class="header-menu-item">
+                        <a class="header-menu-link" href="#portfolio">Портфолио</a>
+                    </li>
+                    <li class="header-menu-item">
+                        <a class="header-menu-link" href="#skills">Навыки</a>
+                    </li>
+                    <li class="header-menu-item">
+                        <a class="header-menu-link" href="#resume">Резюме</a>
+                    </li>
+                    <li class="header-menu-item">
+                        <a class="header-menu-link" href="#testwork">Тестовые работы</a>
+                    </li>
+                    <li class="header-menu-item">
+                        <a class="header-menu-link" href="#certificate">Сертификаты</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
         <header class="header">
             <div class="wrapper">
                 <div class="left-block">
@@ -265,9 +295,8 @@
                             <img class="portfolio-img" src="image/2023-rs-club.jpg" alt="rs-club">
                         </a>
                         <div class="portfolio-description">
-                            <em>Социальная сеть, React, Nest, Mongo, typescript, командная работа, авторизация через
-                                github, deploy на
-                                vercel</em>
+                            <em>Социальная сеть, React, Nest, Mongo, typescript, JWT, авторизация через
+                                github</em>
                         </div>
                     </li>
                     <li class="portfolio-item">
@@ -321,7 +350,8 @@
                             <img class="portfolio-img" src="image/2022-momentum.jpg" alt="momentum">
                         </a>
                         <div class="portfolio-description">
-                            <em>js, смена языков, todo-лист, кастомный аудиоплеер, виджет погоды, время, приветствие,
+                            <em>Моментум, js, смена языков, todo-лист, кастомный аудиоплеер, виджет погоды, время,
+                                приветствие,
                                 таймер</em>
                         </div>
                     </li>
@@ -331,7 +361,7 @@
                             <img class="portfolio-img" src="image/2022-slider-only-css.jpg" alt="slider only css">
                         </a>
                         <div class="portfolio-description">
-                            <em>слайдер на css без js</em>
+                            <em>Слайдер на css без js</em>
                         </div>
                     </li>
 
@@ -361,7 +391,7 @@
                             <img class="portfolio-img" src="image/2022-virtual-keyboard.jpg" alt="virtual keyboard">
                         </a>
                         <div class="portfolio-description">
-                            <em>js, ввод знаков мышкой и с клавиатуры</em>
+                            <em>Виртуальная клавиатура,js, ввод знаков мышкой и с клавиатуры</em>
                         </div>
                     </li>
                     <li class="portfolio-item">
@@ -371,7 +401,7 @@
                             <img class="portfolio-img" src="image/2022-gem-pazzle.jpg" alt="gem pazzle">
                         </a>
                         <div class="portfolio-description">
-                            <em>js, перетаскивание плашек, звуковое сопровождение</em>
+                            <em>Игра пятнашка, js, перетаскивание плашек, звуковое сопровождение</em>
                         </div>
                     </li>
                     <li class="portfolio-item">
@@ -525,8 +555,9 @@
                                 alt="certificate">
                         </a>
                         <div class="certificate-description">
-                            <em class="certificate-text" >React Developer</em>
-                            <a class="certificate-link" href="https://app.rs.school/certificate/ony8wbvb" target="_blank">Ссылка на
+                            <em class="certificate-text">React Developer</em>
+                            <a class="certificate-link" href="https://app.rs.school/certificate/ony8wbvb"
+                                target="_blank">Ссылка на
                                 сертификат</a>
                         </div>
                     </li>
@@ -536,8 +567,9 @@
                                 alt="certificate">
                         </a>
                         <div class="certificate-description">
-                            <em class="certificate-text" >Frontend Developer</em>
-                            <a class="certificate-link" href="https://app.rs.school/certificate/t2v1o9m1" target="_blank">Ссылка на
+                            <em class="certificate-text">Frontend Developer</em>
+                            <a class="certificate-link" href="https://app.rs.school/certificate/t2v1o9m1"
+                                target="_blank">Ссылка на
                                 сертификат</a>
                         </div>
                     </li>
@@ -547,33 +579,37 @@
                                 alt="certificate">
                         </a>
                         <div class="certificate-description">
-                            <em class="certificate-text" >Javascript Base</em>
-                            <a class="certificate-link" href="https://app.rs.school/certificate/kur3rayr" target="_blank">Ссылка на
+                            <em class="certificate-text">Javascript Base</em>
+                            <a class="certificate-link" href="https://app.rs.school/certificate/kur3rayr"
+                                target="_blank">Ссылка на
                                 сертификат</a>
                         </div>
                     </li>
                     <li class="certificate-item">
                         <div>
-                            <img class="portfolio-img" src="image/certificate/lyubasova-web-design.jpg" alt="certificate">
+                            <img class="portfolio-img" src="image/certificate/lyubasova-web-design.jpg"
+                                alt="certificate">
                         </div>
                         <div class="certificate-description">
-                            <em class="certificate-text" >Web Designer</em>
+                            <em class="certificate-text">Web Designer</em>
                         </div>
                     </li>
                     <li class="certificate-item">
                         <div>
-                            <img class="portfolio-img" src="image/certificate/lyubasova-server2003.jpg" alt="certificate">
+                            <img class="portfolio-img" src="image/certificate/lyubasova-server2003.jpg"
+                                alt="certificate">
                         </div>
                         <div class="certificate-description">
-                            <em class="certificate-text" >Windows Server 2003, Active Directory</em>
+                            <em class="certificate-text">Windows Server 2003, Active Directory</em>
                         </div>
                     </li>
                     <li class="certificate-item">
                         <div>
-                            <img class="portfolio-img" src="image/certificate/lyubasova-videoconferenc.jpg" alt="certificate">
+                            <img class="portfolio-img" src="image/certificate/lyubasova-videoconferenc.jpg"
+                                alt="certificate">
                         </div>
                         <div class="certificate-description">
-                            <em class="certificate-text" >Инженер видеоконференц-связи</em>
+                            <em class="certificate-text">Инженер видеоконференц-связи</em>
                         </div>
                     </li>
                     <li class="certificate-item">
@@ -581,7 +617,7 @@
                             <img class="portfolio-img" src="image/certificate/radio-engeneer.jpg" alt="certificate">
                         </div>
                         <div class="certificate-description">
-                            <em class="certificate-text" >Радиомеханик</em>
+                            <em class="certificate-text">Радиомеханик</em>
                         </div>
                     </li>
                     <li class="certificate-item">
@@ -589,15 +625,16 @@
                             <img class="portfolio-img" src="image/certificate/photographer.jpg" alt="certificate">
                         </div>
                         <div class="certificate-description">
-                            <em class="certificate-text" >Фотограф</em>
+                            <em class="certificate-text">Фотограф</em>
                         </div>
                     </li>
                     <li class="certificate-item">
                         <div>
-                            <img class="portfolio-img" src="image/certificate/lyubasova-physicist.jpg" alt="certificate">
+                            <img class="portfolio-img" src="image/certificate/lyubasova-physicist.jpg"
+                                alt="certificate">
                         </div>
                         <div class="certificate-description">
-                            <em class="certificate-text" >Физик, физическая информатика</em>
+                            <em class="certificate-text">Физик, физическая информатика</em>
                         </div>
                     </li>
                 </ul>
