--- a/index.html
+++ b/index.html
@@ -538,6 +538,36 @@
                     </div>
                 </li>
                 <li class="portfolio-item">
+                    <a class="portfolio-link" href="https://test-sbercloud.vercel.app/" target="_blank">
+                        <img class="portfolio-img" src="image/2023-test-sber-cloud.jpg" alt="test work">
+                    </a>
+                    <div class="portfolio-description">
+                        <p>Тестовое задание:</p>
+                        <em>1. Стек: react, typescript, redux toolkit, formik, yap</em><br />
+                        <em>2. Разработка формы описания профиля<br />
+                            В рамках дизайна формы реализовано 3 отдельных таба(шага) формы,
+                            которые можно переключать между собой. При переходе от таба к табу (в том числе возвращаясь
+                            на предыдущий) информация должна сохранятся. 
+                            На первом экране необходимо добавить информацию о себе и по нажатию
+                            на кнопку будет происходить переход на форму. При переходе должен меняться роут.
+                            На каждом этапе формы нужно валидировать значения конкретного шага.
+                            После отправки формы показывать модальное окно с success или error.
+                            Модалку нужно будет разработать самому, не используя сторонние библиотеки или ui-компоненты.
+                            Для отправки формы использовать api https://api.sbercloud.ru/content/v1/bootcamp/frontend.
+                            Адаптивная версия обязательна, способ реализации по твоему выбору
+                        </em><br /><br />
+                        <a class="testwork-link" href="https://github.com/FrontCloudCamp/test-assignment"
+                            target="_blank">Ссылка на тестовое задание</a><br />
+                        <a class="testwork-link"
+                            href="https://www.figma.com/file/rzIp6awR6dGFVrcxcCEwzD/Untitled?type=design&node-id=0-1&t=90NCIZwzg7SIsdMb-0"
+                            target="_blank">Ссылка на figma</a><br />
+                        <a class="testwork-link" href="https://github.com/evakerrigan/test_Sbercloud"
+                            target="_blank">Ссылка на репозиторий</a><br />
+                        <a class="testwork-link" href="https://test-sbercloud.vercel.app/" target="_blank">Ссылка на
+                            деплой</a>
+                    </div>
+                </li>
+                <li class="portfolio-item">
                     <a class="portfolio-link" href="" target="_blank">
                     </a>
                     <div class="portfolio-description">
