--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV</title>
+    <title>CV Ксения Любасова</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,600;1,500&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style/normalize.css">
@@ -109,7 +109,14 @@
                             <li class="header-contacts-item">
                                 <h3 class="header-contacts-title">Social</h3>
                                 <a class="header-contacts-link" href="http://t.me/EvaKerrigan" target="_blank">telegram:
-                                    EvaKerrigan</a>
+                                    EvaKerrigan</a><br>
+                                <a class="header-contacts-link" href="https://www.linkedin.com/in/evakerrigan"
+                                    target="_blank">linkedin:
+                                    evakerrigan</a><br>
+                                <a class="header-contacts-link"
+                                    href="https://spb.hh.ru/resume/786e614aff0484b8820039ed1f463169587a70"
+                                    target="_blank">hh:
+                                    Ксения Любасова</a>
                             </li>
                         </ul>
                     </div>
@@ -517,6 +524,7 @@
             <h3 class="testwork-title">Тестовые работы 2023</h3>
             <ul class="portfolio-list">
                 <li class="portfolio-item">
+                    <h3>ITMO</h3>
                     <a class="portfolio-link" href="https://test-research-lab.vercel.app/" target="_blank">
                         <img class="portfolio-img" src="image/2023-test-research-lab.jpg" alt="test work">
                     </a>
@@ -538,6 +546,7 @@
                     </div>
                 </li>
                 <li class="portfolio-item">
+                    <h3>Cloud</h3>
                     <a class="portfolio-link" href="https://test-sbercloud.vercel.app/" target="_blank">
                         <img class="portfolio-img" src="image/2023-test-sber-cloud.jpg" alt="test work">
                     </a>
@@ -547,7 +556,7 @@
                         <em>2. Разработка формы описания профиля<br />
                             В рамках дизайна формы реализовано 3 отдельных таба(шага) формы,
                             которые можно переключать между собой. При переходе от таба к табу (в том числе возвращаясь
-                            на предыдущий) информация должна сохранятся. 
+                            на предыдущий) информация должна сохранятся.
                             На первом экране необходимо добавить информацию о себе и по нажатию
                             на кнопку будет происходить переход на форму. При переходе должен меняться роут.
                             На каждом этапе формы нужно валидировать значения конкретного шага.
@@ -568,9 +577,33 @@
                     </div>
                 </li>
                 <li class="portfolio-item">
-                    <a class="portfolio-link" href="" target="_blank">
+                    <h3>Picasso</h3>
+                    <a class="portfolio-link" href="https://test-picasso.vercel.app/" target="_blank">
+                        <img class="portfolio-img" src="image/2023-test-picasso.jpg" alt="test work">
                     </a>
                     <div class="portfolio-description">
+                        <p>Тестовое задание:</p>
+                        <em>Реализовать приложение на React. Приложение должно отображать список постов.
+                            Также необходимо отображать селект с пользователями, при выборе пользователя
+                            отображать только его посты (фильтрацию реализовать на стороне сервера).
+                            При клике на пост открывается страница с информацией о посте, информацией
+                            о пользователе, который его написал и комментариями к этому посту.</em><br />
+
+                        <p>Для данных использовать API: https://jsonplaceholder.typicode.com:</p>
+
+                        <em>Дополнительно: Реализовать возможность добавления комментария с
+                            отправкой на сервер (запрос post на https://jsonplaceholder.typicode.com/comments).
+                            Реализовать
+                            вывод уведомлений при различных действиях (например, при отправке комментариев / при
+                            переходе
+                            между роутами) Использование ui библиотек приветствуется. Использовать React Router для
+                            перехода
+                            по страницам.</em><br /><br />
+
+                        <a class="testwork-link" href="https://github.com/evakerrigan/test_Picasso"
+                            target="_blank">Ссылка на репозиторий</a><br />
+                        <a class="testwork-link" href="https://test-picasso.vercel.app/" target="_blank">Ссылка на
+                            деплой</a>
                     </div>
                 </li>
             </ul>
