feat: add new sertificate

--- a/index.html
+++ b/index.html
@@ -131,6 +131,11 @@
                             <h2 class="content-title">Образование</h2>
                             <ul class="content-education-list">
                                 <li class="content-education-item">
+                                    <div class="content-education-date">2024</div>
+                                    <div class="content-education-title">Backend-Developer</div>
+                                    <div class="content-education-place">RS-School</div>
+                                </li>
+                                <li class="content-education-item">
                                     <div class="content-education-date">2022</div>
                                     <div class="content-education-title">Frontend-Developer</div>
                                     <div class="content-education-place">RS-School</div>
@@ -176,6 +181,19 @@
                     <section id="experience">
                         <h2 class="content-title">Опыт работы</h2>
                         <ul class="content-expiriens-list">
+                            <li class="content-expiriens-item expiriens-wrapper">
+                                <div class="expiriens-left-block">
+                                    <div class="content-expiriens-date">2023-2024</div>
+                                    <div class="content-expiriens-company">Фин.тех</div>
+                                </div>
+                                <div class="expiriens-right-block">
+                                    <div class="content-expiriens-profession">Frontend-разработчик</div>
+                                    <div class="content-expiriens-tasks">
+                                        React, AntDesign. Создание новых модулей в проекте,
+                                        оптимизация и рефакторинг старого кода.
+                                    </div>
+                                </div>
+                            </li>
                             <li class="content-expiriens-item expiriens-wrapper">
                                 <div class="expiriens-left-block">
                                     <div class="content-expiriens-date">2022</div>
@@ -612,6 +630,18 @@
             <section id="certificate">
                 <h3 class="certificate-title">Сертификаты</h3>
                 <ul class="portfolio-list">
+                    <li class="certificate-item">
+                        <a class="portfolio-link" href="https://app.rs.school/certificate/a4anejth" target="_blank">
+                            <img class="portfolio-img" src="image/certificate/klyubasova-backend-developer.jpg"
+                                alt="certificate">
+                        </a>
+                        <div class="certificate-description">
+                            <em class="certificate-text">Backend Developer</em>
+                            <a class="certificate-link" href="https://app.rs.school/certificate/ony8wbvb"
+                                target="_blank">Ссылка на
+                                сертификат</a>
+                        </div>
+                    </li>
                     <li class="certificate-item">
                         <a class="portfolio-link" href="https://app.rs.school/certificate/ony8wbvb" target="_blank">
                             <img class="portfolio-img" src="image/certificate/klyubasova-react-developer.jpg"
