feat: add technology

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                                     <div class="content-expiriens-profession">Frontend-разработчик</div>
                                     <div class="content-expiriens-tasks">
                                         Работа в экосистеме React.js. Создание новых компонент в проекте,
-                                        оптимизация и рефакторинг чужого старого кода, настройка используемых
+                                        оптимизация и рефакторинг чужого старого кода, адаптация используемых
                                         внешних библиотек под особенности проекта.
                                     </div>
                                 </div>
@@ -278,6 +278,7 @@
                             <li class="content-skills-item"><span>TypeScript</span></li>
                             <li class="content-skills-item"><span>React</span></li>
                             <li class="content-skills-item"><span>Redux</span></li>
+                            <li class="content-skills-item"><span>AntDesign</span></li>
                             <li class="content-skills-item"><span>RTK Query</span></li>
                             <li class="content-skills-item"><span>HTML5</span></li>
                             <li class="content-skills-item"><span>CSS3</span></li>
