feat: add profession

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                                     <div class="content-expiriens-company">Fingli</div>
                                 </div>
                                 <div class="expiriens-right-block">
-                                    <div class="content-expiriens-profession">Веб-разработчик</div>
+                                    <div class="content-expiriens-profession">Веб-дизайнер, веб-разработчик</div>
                                     <div class="content-expiriens-tasks">
                                         Дизайн, редизайн и верстка сайтов.
                                     </div>
