feat: change cv

--- a/index.html
+++ b/index.html
@@ -279,7 +279,8 @@
                             <li class="content-skills-item"><span>React</span></li>
                             <li class="content-skills-item"><span>Redux</span></li>
                             <li class="content-skills-item"><span>AntDesign</span></li>
-                            <li class="content-skills-item"><span>RTK Query</span></li>
+                            <li class="content-skills-item"><span>Tailwind</span></li>
+                            <li class="content-skills-item"><span>Vue3</span></li>
                             <li class="content-skills-item"><span>HTML5</span></li>
                             <li class="content-skills-item"><span>CSS3</span></li>
                             <li class="content-skills-item"><span>Figma</span></li>
