feat: change cv

--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
                             <li class="content-skills-item"><span>TypeScript</span></li>
                             <li class="content-skills-item"><span>React</span></li>
                             <li class="content-skills-item"><span>Redux</span></li>
+                            <li class="content-skills-item"><span>RTK Query</span></li>
                             <li class="content-skills-item"><span>AntDesign</span></li>
                             <li class="content-skills-item"><span>Tailwind</span></li>
                             <li class="content-skills-item"><span>Vue3</span></li>
@@ -841,6 +842,7 @@
                                             (Работа в экосистеме React.js. Создание новых компонент в проекте,
                                             оптимизация и рефакторинг чужого старого кода, настройка используемых
                                             внешних библиотек под особенности проекта.)</li>
+                                        <li>2023 – 2024 - Фин-тех, frontend-developer</li>
                                     </ol>
                                 </div>
                             </div>
@@ -859,7 +861,7 @@
                                     <table class="b-resume-skills-table">
                                         <tr>
                                             <td>Языки:</td>
-                                            <td><span><strong>Javascript, (Typescript)</strong></span></td>
+                                            <td><span><strong>Javascript, Typescript</strong></span></td>
                                         </tr>
                                         <tr>
                                             <td>Библиотеки:</td>
