feat: change cv

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         </section>
                         <section id="english">
                             <h2 class="content-title">English</h2>
-                            <p class="content-english-description">3000 слов в словарном запасе, но не говорю пока.</p>
+                            <p class="content-english-description">B1 (3000 слов)</p>
                         </section>
                     </div>
                 </div>
@@ -184,7 +184,7 @@
                             <li class="content-expiriens-item expiriens-wrapper">
                                 <div class="expiriens-left-block">
                                     <div class="content-expiriens-date">2023-2024</div>
-                                    <div class="content-expiriens-company">Фин.тех</div>
+                                    <div class="content-expiriens-company">НДА (Фин.тех)</div>
                                 </div>
                                 <div class="expiriens-right-block">
                                     <div class="content-expiriens-profession">Frontend-разработчик</div>
@@ -197,7 +197,7 @@
                             <li class="content-expiriens-item expiriens-wrapper">
                                 <div class="expiriens-left-block">
                                     <div class="content-expiriens-date">2022</div>
-                                    <div class="content-expiriens-company">Стриминговый<br /> сервис</div>
+                                    <div class="content-expiriens-company">НДА (Стриминговый<br /> сервис)</div>
                                 </div>
                                 <div class="expiriens-right-block">
                                     <div class="content-expiriens-profession">Frontend-разработчик</div>
@@ -781,11 +781,6 @@
                                                     href="https://t.me/EvaKerrigan" class="resume-link"> EvaKerrigan</a>
                                             </li>
                                             <li class="resume-item">
-                                                <span><strong>Skype:</strong></span><a href="skype:EvaKerrigan"
-                                                    class="resume-link">
-                                                    EvaKerrigan</a>
-                                            </li>
-                                            <li class="resume-item">
                                                 <span><strong>Vk:</strong></span><a href="http://vk.com/evakerrigan"
                                                     target="_blank" class="resume-link"> evakerrigan</a>
                                             </li>
@@ -817,7 +812,8 @@
                                             по программе «Web дизайнер».</li>
                                         <li>2014 г. Санкт-Петербург, школа Epic Skills, курсы и вебинары: Bootstrap,
                                             Jquery, PHP, Javascript.</li>
-                                        <li>2022 г. RS-school, курс JavaScript/Front-end Developer</li>
+                                        <li>2022 г. RS-school, курс JavaScript/Frontend Developer</li>
+                                        <li>2024 г. RS-school, курс Node/Backend Developer</li>
                                     </ol>
                                 </div>
                             </div>
@@ -826,23 +822,23 @@
                                     <div class="b-resume-work-title">
                                         <span><strong>Место работы:</strong></span>
                                     </div>
-                                    <ol>
-                                        <li>2014 – Fingli, web-разработчик (Дизайн, редизайн и верстка сайтов.)</li>
-                                        <li>2014 – Astropol, web-разработчик (Дизайн и верстка сайтов с нуля. На cms
-                                            opencart, cms wordpress, cms modx.)</li>
-                                        <li>2015 – Hell’s Hamsters, верстальщик (Верстка лендингов)</li>
-                                        <li>2015 – 2016 - группа ВТБ, html-верстальщик (Вёрстка страниц
-                                            корпоративного сайта и верстка email-рассылок.)</li>
-                                        <li>2016 – 2019 - декрет</li>
-                                        <li>2020 – Freelance, web-разработчик (Создание и поддержка сайтов. Адаптивная
-                                            верстка. Bootstrap. Pixel perfect. Git. Responsive. Кроссбраузерная
-                                            верстка.) </li>
-                                        <li>2021 – смена направления работы на js / frontend / react</li>
-                                        <li>2022 – Стриминговый сервис, frontend-developer
+                                    <ol> 
+                                        <li>2023 – 2024 - НДА, Фин-тех, frontend-developer</li>
+                                        <li>2022 – НДА, Стриминговый сервис, frontend-developer
                                             (Работа в экосистеме React.js. Создание новых компонент в проекте,
                                             оптимизация и рефакторинг чужого старого кода, настройка используемых
                                             внешних библиотек под особенности проекта.)</li>
-                                        <li>2023 – 2024 - Фин-тех, frontend-developer</li>
+                                            <li>2021 – смена направления работы на js / frontend / react, обучение на курсах</li>
+                                            <li>2020 – Freelance, web-разработчик (Создание и поддержка сайтов. Адаптивная
+                                                верстка. Bootstrap. Pixel perfect. Git. Responsive. Кроссбраузерная
+                                                верстка.) </li>
+                                                <li>2016 – 2019 - декрет</li>
+                                                <li>2015 – 2016 - группа ВТБ, html-верстальщик (Вёрстка страниц
+                                                    корпоративного сайта и верстка email-рассылок.)</li>
+                                                    <li>2015 – Hell’s Hamsters, верстальщик (Верстка лендингов)</li>
+                                                    <li>2014 – Astropol, web-разработчик (Дизайн и верстка сайтов с нуля. На cms
+                                                        opencart, cms wordpress, cms modx.)</li>
+                                                        <li>2014 – Fingli, web-разработчик (Дизайн, редизайн и верстка сайтов.)</li>
                                     </ol>
                                 </div>
                             </div>
@@ -869,7 +865,11 @@
                                         </tr>
                                         <tr>
                                             <td>Фреймворки:</td>
-                                            <td><span><strong>(Nest.js)</strong></span></td>
+                                            <td><span><strong>(Vue3.js)</strong></span></td>
+                                        </tr>
+                                        <tr>
+                                            <td>Дизайн-системы:</td>
+                                            <td><span><strong>AntDesign, Mui</strong></span></td>
                                         </tr>
                                         <tr>
                                             <td>Технологии: </td>
@@ -881,7 +881,7 @@
                                         </tr>
                                         <tr>
                                             <td>Верстка:</td>
-                                            <td><span><strong>HTML5, CSS3, Scss, Mui, Tailwind</strong></span></td>
+                                            <td><span><strong>HTML5, CSS3, Scss, Tailwind</strong></span></td>
                                         </tr>
                                     </table>
                                 </div>
