--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
                     <em
                       ><strong>
                         Соискание&nbsp;должности&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        Frontend&nbsp;/&nbsp;React&nbsp;Developer
+                        Frontend&nbsp;Developer
                       </strong></em
                     >
                   </div>
@@ -931,7 +931,7 @@
               <a class="footer-github-link" href="https://github.com/evakerrigan" target="_blank">Github</a>
             </div>
             <div class="button_download">
-              <a href="image/KseniiaLiubasova.doc"><em>Скачать резюме</em></a>
+              <a href="image/KseniiaLiubasova.pdf"><em>Скачать резюме</em></a>
             </div>
             <div class="footer-block">2023</div>
           </div>
