feat: small edits

--- a/index.html
+++ b/index.html
@@ -161,10 +161,15 @@
                   </li>
                   <li class="content-education-item">
                     <div class="content-education-date">ВЫСШЕЕ ОБРАЗОВАНИЕ</div>
-                    <div class="content-education-title">Факультет физики</div>
+                    <div class="content-education-title">Факультет физики, Физико-техническая информатика</div>
                     <div class="content-education-place">КГУ</div>
                   </li>
                 </ul>
+              </section>
+              <section id="english">
+                <h2 class="content-title">Языки</h2>
+                <p class="content-english-description">Русский - родной</p>
+                <p class="content-english-description">English - B1 (3000 слов)</p>
               </section>
               <section id="hobbies">
                 <h2 class="content-title">Увлечения</h2>
@@ -174,10 +179,6 @@
                   <li class="content-hobbies-item">Психология</li>
                   <li class="content-hobbies-item">Путешествия</li>
                 </ul>
-              </section>
-              <section id="english">
-                <h2 class="content-title">English</h2>
-                <p class="content-english-description">B1 (3000 слов)</p>
               </section>
             </div>
           </div>
@@ -263,7 +264,7 @@
                 <li class="content-expiriens-item expiriens-wrapper">
                   <div class="expiriens-left-block">
                     <div class="content-expiriens-date">2014-2014</div>
-                    <div class="content-expiriens-company">Fingli</div>
+                    <div class="content-expiriens-company">Fingli, веб-студия</div>
                   </div>
                   <div class="expiriens-right-block">
                     <div class="content-expiriens-profession">Веб-дизайнер, веб-разработчик</div>
@@ -762,8 +763,7 @@
                   <div class="b-resume-title">
                     <em
                       ><strong>
-                        Соискание&nbsp;должности&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        Frontend&nbsp;Developer
+                        Соискание&nbsp;должности&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Frontend&nbsp;Developer
                       </strong></em
                     >
                   </div>
@@ -857,7 +857,7 @@
                         2014 – Astropol, web-разработчик (Дизайн и верстка сайтов с нуля. На cms opencart, cms
                         wordpress, cms modx.)
                       </li>
-                      <li>2014 – Fingli, web-разработчик (Дизайн, редизайн и верстка сайтов.)</li>
+                      <li>2014 – Fingli, веб-студия, web-разработчик (Дизайн, редизайн и верстка сайтов.)</li>
                     </ol>
                   </div>
                 </div>
