feat: small edits

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 <li class="content-expiriens-item expiriens-wrapper">
                   <div class="expiriens-left-block">
                     <div class="content-expiriens-date">2023-2024</div>
-                    <div class="content-expiriens-company">НДА (Фин.тех)</div>
+                    <div class="content-expiriens-company">Фин.тех</div>
                   </div>
                   <div class="expiriens-right-block">
                     <div class="content-expiriens-profession">Frontend-разработчик</div>
@@ -202,8 +202,8 @@
                   <div class="expiriens-left-block">
                     <div class="content-expiriens-date">2022</div>
                     <div class="content-expiriens-company">
-                      НДА (Стриминговый<br />
-                      сервис)
+                      Стриминговый<br />
+                      сервис
                     </div>
                   </div>
                   <div class="expiriens-right-block">
@@ -836,9 +836,9 @@
                       <span><strong>Место работы:</strong></span>
                     </div>
                     <ol>
-                      <li>2023 – 2024 - НДА, Фин-тех, frontend-developer</li>
+                      <li>2023 – 2024 - Фин-тех, frontend-developer</li>
                       <li>
-                        2022 – НДА, Стриминговый сервис, frontend-developer (Работа в экосистеме React.js. Создание
+                        2022 – Стриминговый сервис, frontend-developer (Работа в экосистеме React.js. Создание
                         новых компонент в проекте, оптимизация и рефакторинг чужого старого кода, настройка используемых
                         внешних библиотек под особенности проекта.)
                       </li>
