--- a/index.html
+++ b/index.html
@@ -348,10 +348,10 @@
           <h3 class="portfolio-title">Проекты 2022 года</h3>
           <input class="hide" id="hd-2022" type="checkbox" />
           <label for="hd-2022">
-            <span class="portfolio-button">
+            <div class="portfolio-button">
               Показать
               <div class="arrow down"></div>
-            </span>
+            </div>
           </label>
           <ul class="portfolio-list">
             <li class="portfolio-item">
@@ -458,10 +458,10 @@
           <h3 class="portfolio-title">Работа в группе ВТБ, декрет и фриланс</h3>
           <input class="hide" id="hd-2016" type="checkbox" />
           <label for="hd-2016">
-            <span class="portfolio-button">
+            <div class="portfolio-button">
               Показать
               <div class="arrow down"></div>
-            </span>
+            </div>
           </label>
           <ul class="portfolio-list">
             <li class="portfolio-item">
@@ -471,10 +471,10 @@
           <h3 class="portfolio-title">Проекты 2015 года</h3>
           <input class="hide" id="hd-2015" type="checkbox" />
           <label for="hd-2015">
-            <span class="portfolio-button">
+            <div class="portfolio-button">
               Показать
               <div class="arrow down"></div>
-            </span>
+            </div>
           </label>
           <ul class="portfolio-list">
             <li class="portfolio-item">
@@ -521,10 +521,10 @@
           <h3 class="portfolio-title">Проекты 2013 года</h3>
           <input class="hide" id="hd-2013" type="checkbox" />
           <label for="hd-2013">
-            <span class="portfolio-button">
+            <div class="portfolio-button">
               Показать
               <div class="arrow down"></div>
-            </span>
+            </div>
           </label>
           <ul class="portfolio-list">
             <li class="portfolio-item">
@@ -933,6 +933,9 @@
             <div class="button_download">
               <a href="image/KseniiaLiubasova.pdf"><em>Скачать резюме</em></a>
             </div>
+            <a href="https://rs.school/courses/javascript-preschool-ru" target="_blank">
+                <img class="rs-school-logo" style="height: 50px" src="./image/rs-school-logo.svg" alt="rsschool">
+            </a>
             <div class="footer-block">2023</div>
           </div>
         </div>
