fix: new error fix

--- a/index.html
+++ b/index.html
@@ -348,10 +348,10 @@
           <h3 class="portfolio-title">Проекты 2022 года</h3>
           <input class="hide" id="hd-2022" type="checkbox" />
           <label for="hd-2022">
-            <div class="portfolio-button">
-              Показать
-              <div class="arrow down"></div>
-            </div>
+            <span class="portfolio-button">
+                Показать
+                <span class="arrow down" style="display: block"></span>
+              </span>
           </label>
           <ul class="portfolio-list">
             <li class="portfolio-item">
@@ -458,10 +458,10 @@
           <h3 class="portfolio-title">Работа в группе ВТБ, декрет и фриланс</h3>
           <input class="hide" id="hd-2016" type="checkbox" />
           <label for="hd-2016">
-            <div class="portfolio-button">
-              Показать
-              <div class="arrow down"></div>
-            </div>
+            <span class="portfolio-button">
+                Показать
+                <span class="arrow down" style="display: block"></span>
+              </span>
           </label>
           <ul class="portfolio-list">
             <li class="portfolio-item">
@@ -471,10 +471,10 @@
           <h3 class="portfolio-title">Проекты 2015 года</h3>
           <input class="hide" id="hd-2015" type="checkbox" />
           <label for="hd-2015">
-            <div class="portfolio-button">
-              Показать
-              <div class="arrow down"></div>
-            </div>
+            <span class="portfolio-button">
+                Показать
+                <span class="arrow down" style="display: block"></span>
+              </span>
           </label>
           <ul class="portfolio-list">
             <li class="portfolio-item">
@@ -521,10 +521,10 @@
           <h3 class="portfolio-title">Проекты 2013 года</h3>
           <input class="hide" id="hd-2013" type="checkbox" />
           <label for="hd-2013">
-            <div class="portfolio-button">
+            <span class="portfolio-button">
               Показать
-              <div class="arrow down"></div>
-            </div>
+              <span class="arrow down" style="display: block"></span>
+            </span>
           </label>
           <ul class="portfolio-list">
             <li class="portfolio-item">
