--- a/index.html
+++ b/index.html
@@ -297,6 +297,48 @@
                 <li class="content-skills-item"><span>Jira</span></li>
               </ul>
             </section>
+            <section id="code">
+              <h2 class="content-title">Пример кода - телеграм бот погоды</h2>
+              <pre>
+                <code>
+require("dotenv").config();
+const { Telegraf } = require("telegraf");
+const axios = require("axios");
+
+const bot = new Telegraf(process.env.BOT_TOKEN);
+
+bot.start((ctx) => ctx.reply("send me ur geolocation"));
+
+bot.on("message", async (ctx) => {
+  if (ctx.message) {
+  
+    const weatherAPIUrl = 
+    `https://api.openweathermap.org/data/2.5/
+    weather?lat=${ctx.message.location.latitude}&lon=
+    ${ctx.message.location.longitude}
+    &appid=${process.env.OWEATHER_APIKEY}`
+    
+    try {
+      const response = await axios.get(weatherAPIUrl);
+      console.log(response.data);
+      console.log(ctx.message);
+      ctx.reply(
+        `${response.data.name}: 
+        ${response.data.weather[0].main} 
+        ${response.data.main.temp} °C`
+      );
+    } catch (error) {
+      console.error(error);
+      console.log(ctx.message);
+      ctx.reply("Ошибка при получении погоды.");
+    }
+  }
+});
+
+bot.launch();
+                </code>
+              </pre>
+              </section>
           </div>
         </div>
       </main>
