fix: change box-shadow at img

--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
         <li class="portfolio-item">
           <h3>ITMO</h3>
           <a class="portfolio-link" href="https://test-research-lab.vercel.app/" target="_blank">
-            <img class="portfolio-img" src="image/test/2023-test-research-lab.jpg" alt="test work" />
+            <img class="portfolio-test-img" src="image/test/2023-test-research-lab.jpg" alt="test work" />
           </a>
           <div class="portfolio-description">
             <p>Тестовое задание:</p>
@@ -614,7 +614,7 @@
         <li class="portfolio-item">
           <h3>Cloud</h3>
           <a class="portfolio-link" href="https://test-sbercloud.vercel.app/" target="_blank">
-            <img class="portfolio-img" src="image/test/2023-test-sber-cloud.jpg" alt="test work" />
+            <img class="portfolio-test-img" src="image/test/2023-test-sber-cloud.jpg" alt="test work" />
           </a>
           <div class="portfolio-description">
             <p>Тестовое задание:</p>
@@ -641,7 +641,7 @@
         <li class="portfolio-item">
           <h3>Picasso</h3>
           <a class="portfolio-link" href="https://test-picasso.vercel.app/" target="_blank">
-            <img class="portfolio-img" src="image/test/2023-test-picasso.jpg" alt="test work" />
+            <img class="portfolio-test-img" src="image/test/2023-test-picasso.jpg" alt="test work" />
           </a>
           <div class="portfolio-description">
             <p>Тестовое задание:</p>
